kubernetes/homelab-k8s-001/apps/dev/artifactory/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: artifactory
spec:
  hostnames: ["artifactory.dmfrey.com"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: artifactory
          namespace: dev
          port: 8082
